stylesheet.css
body {
    background-color: #303030;
    margin: 0;
    padding: 0;
    color: #FFF;
    font-family: Arial, sans-serif;
    font-size: 21px;
    line-height: 1.4;
}
ul, ol, dl {
    padding: 0;
    margin: 0;
}
li {
    margin-left: 25px;
    margin-right: 25px;
    font-size: 14px;
    color: #000;

}
h1, h2, h3, h4, h5, h6, p {
    margin-top: 0;
    padding-right: 15px;
    padding-left: 15px;
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
    font-style: normal;
}
a img {
    border: none;
    text-decoration: none;
}
a:link {
    margin-top: 0;
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
    font-style: normal;
    color: #000;
    text-decoration: none;

}
a:visited {
    margin-top: 0;
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
    font-style: normal;
    color: #000;
    text-decoration: none;
}
a:hover, a:active, a:focus {
    margin-top: 0;
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
    font-style: normal;
    color: #2f41d6;
    text-decoration: none;
}
.container {
    width: 100%;
    max-width: 1920px;
    min-width: 720px;
    background-color: #303030;
    margin: 0 auto;
    position: relative;
}
.header-cont {
    background: rgba(75, 75, 75, 0.6);
    width: 100%;
    position: fixed;
    top: 0;
    border-bottom: 2px solid rgba(0, 0, 0, 0.91);
    box-shadow: 0 8px 16px rgba(0,0,0,0.5);
}
.header {
    height: 80px;
    max-width: 1280px;
    margin:0 auto;
}
#headertext{
    -webkit-text-stroke: 1px #000;
}
/* LANDING HOME PAGE*/
.landing {
    margin: 0 auto;
    background-image: url("http://iliketowastemytime.com/sites/default/files/rolling-hills-hd-wallpaper.jpg");
    background-size: cover;
    height: 725px;
    width: 100%;
    border-top: 40px solid #000;
    border-bottom: 40px solid #000;
    display: flex;
    align-items: center;
    justify-content: center
}
#landingimage {
    margin: 0;
    border-radius: 15px 0 0 15px;
    border: solid 1px #000;
    background-color: antiquewhite;
}
.landingdesc {
    margin: 0;
    background-color: rgba(0, 0, 0, 0.5);
    width: 330px;
    height: 140px;
    text-align: center;
    padding: 5px 0 5px 0;
    border-radius: 0 15px 15px 0;
    border: solid 1px #000;
}

/* ALL OTHER PAGES*/
.content {
    margin: 80px auto 0;
    padding: 10px 5px;
    max-width: 1020px;
    min-height: 605px;
    background-color: #FFFFFF;
    color: #000;
    border-left: solid #000 2px;
    border-right: solid #000 2px;
}
.contentLanding {
    margin: 0 auto;
    padding: 10px 5px;
    max-width: 1020px;
    min-height: 725px;
    background-color: #FFFFFF;
    color: #000;
    border-left: solid #000 2px;
    border-right: solid #000 2px;
}
.accountContent{
    margin: 80px auto 0;
    padding: 10px 5px;
    max-width: 1020px;
    min-height: 605px;
    background-color: #ffffff;
    color: #000;
    border-left: solid #000 2px;
    border-right: solid #000 2px;
}
#loginForm{
    text-align: center;
}

.customerInfo , .customerPurchasing, .tourTime {
    margin: 0 auto;
    text-align: center;
    border: solid 1px #000;
}
table.customerInfo td, table.customerPurchasing td{
    width: 120px;
    border: solid 1px #000;
}
hr.fade {
    border: 0;
    height: 1px;
    background: #333;
    background-image: linear-gradient(to right, #ccc, #333, #ccc);
}
.underground {
    margin: 0 auto;
    background-image: url("http://dirttwister.com/images/reflex/wiki/Kingston_rnd1_dirt.jpg");
    background-repeat: repeat;
    min-height: 725px;
    width: 100%;
    border-bottom: 40px solid #000;
}
.column1 {
    width: 70%;
    float: left;
}
.column2 {
    width: 30%;
    float: right;
}
#formCol1 {
    width: 60%;
    float: left;
}
#formCol2 {
    width: 40%;
    float: right;
}
#smallText {
    font-size: 14px;
}
#billingForm table{
    table-layout: fixed;
    width: 400px;
}
#billingForm td {
    width: 200px;
}
#infoForm table{
    table-layout: fixed;
    width: 400px;
}
#infoForm td {
    width: 200px;
}

